--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,15 +22,15 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
     "react-router-dom": "^6.30.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "vite": "^5.1.4",
+    "@vitejs/plugin-react": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "tailwindcss": "^3.4.1"
   }
 }
