--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite --config vite.config.user.js",
-    "dev:admin": "vite --config vite.config.admin.js",
-    "build": "vite build --config vite.config.user.js",
-    "build:admin": "vite build --config vite.config.admin.js",
-    "preview": "vite preview",
-    "preview:admin": "vite preview --outDir dist-admin"
+    "dev": "npx vite --config vite.config.user.js",
+    "dev:admin": "npx vite --config vite.config.admin.js",
+    "build": "npx vite build --config vite.config.user.js",
+    "build:admin": "npx vite build --config vite.config.admin.js",
+    "preview": "npx vite preview",
+    "preview:admin": "npx vite preview --outDir dist-admin"
   },
   "dependencies": {
     "axios": "^1.6.7",
