--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.1",
   "type": "module",
   "scripts": {
-    "dev": "npx vite --config vite.config.user.js",
-    "dev:admin": "npx vite --config vite.config.admin.js",
-    "build": "npx vite build --config vite.config.user.js",
-    "build:admin": "npx vite build --config vite.config.admin.js",
-    "preview": "npx vite preview",
-    "preview:admin": "npx vite preview --outDir dist-admin"
+    "dev": "vite --config vite.config.user.js",
+    "dev:admin": "vite --config vite.config.admin.js",
+    "build": "vite build --config vite.config.user.js",
+    "build:admin": "vite build --config vite.config.admin.js",
+    "preview": "vite preview",
+    "preview:admin": "vite preview --outDir dist-admin"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -24,13 +24,13 @@
     "react-router-dom": "^6.30.3",
     "xlsx": "^0.18.5",
     "vite": "^5.1.4",
-    "@vitejs/plugin-react": "^4.2.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0"
   }
 }
