--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "dev:admin": "vite --config vite.config.admin.js",
     "build": "vite build --config vite.config.user.js",
     "build:admin": "vite build --config vite.config.admin.js",
+    "railway:build": "npm install && npm run build",
     "preview": "vite preview",
     "preview:admin": "vite preview --outDir dist-admin"
   },
