--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --config vite.config.user.js",
     "dev:admin": "vite --config vite.config.admin.js",
     "build": "vite build --config vite.config.user.js",
-    "build:admin": "vite build --config vite.config.admin.js",
+    "build:admin": "vite build --config vite.config.admin.js && cp dist-admin/admin-index.html dist-admin/index.html",
     "preview": "vite preview",
     "preview:admin": "vite preview --outDir dist-admin"
   },
